force-app/main/default/objects/Accounts_VIP__c/Accounts_VIP__c.object-meta.xml
<CustomObject>
    <label>Accounts (VIP)</label>
    <nameField>
        <displayFormat>VIPA-{0}</displayFormat>
        <label>Accounts (VIP) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>