force-app/main/default/objects/Accounts_VIP__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VIP Accounts</relationshipLabel>
    <relationshipName>VIP_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>